--- a/dummy-server/package.json
+++ b/dummy-server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "4.18.1"
+    "express": "4.18.1",
+    "@rescript/std": "9.1.3"
   },
   "main": "lib/js/src/Index.bs.js",
   "scripts": {
@@ -13,9 +14,7 @@
     "build": "npm run build:rs"
   },
   "devDependencies": {
-    "rescript": "9.1.4",
     "@ryyppy/rescript-promise": "2.1.0",
-    "rescript-url": "0.1.3",
     "rescript-nodejs": "14.2.0"
   }
 }
