--- a/nj-argument-conversion-service/package.json
+++ b/nj-argument-conversion-service/package.json
@@ -11,7 +11,7 @@
     "build:rs": "rescript",
     "clean:rs": "rescript clean -with-deps",
     "start:rs": "rescript build -w",
-    "build": "npm run build:rs"
+    "build": "npm run build:rs && ./copy-rescript-deps-to-lib"
   },
   "devDependencies": {
     "@ryyppy/rescript-promise": "2.1.0",
