--- a/nj-argument-rss/package.json
+++ b/nj-argument-rss/package.json
@@ -7,7 +7,7 @@
     "axios": "0.26.1",
     "xml2js": "0.4.23",
     "node-html-parser": "5.3.3",
-    "@rescript/std": "9.1.3"
+    "@rescript/std": "10.1.4"
   },
   "main": "lib/js/src/main/Index.bs.js",
   "scripts": {
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@ryyppy/rescript-promise": "2.1.0",
-    "rescript-nodejs": "14.2.0"
+    "rescript-nodejs": "16.0.0",
+    "rescript": "10.1.4"
   }
 }
