--- a/nj-argument-rss/package.json
+++ b/nj-argument-rss/package.json
@@ -7,19 +7,17 @@
     "axios": "0.26.1",
     "xml2js": "0.4.23",
     "node-html-parser": "5.3.3",
-    "@rescript/std": "10.1.4"
+    "@rescript/core": "0.6.0"
   },
   "main": "lib/js/src/main/Index.bs.js",
   "scripts": {
-    "build:rs": "rescript build -with-deps",
-    "clean:rs": "rescript clean -with-deps",
+    "build:rs": "rescript build",
+    "clean:rs": "rescript clean",
     "start:rs": "rescript build -w",
     "build:copy": "./copy-rescript-deps-to-lib",
     "build": "npm run build:rs && npm run build:copy"
   },
   "devDependencies": {
-    "@ryyppy/rescript-promise": "2.1.0",
-    "rescript-nodejs": "16.0.0",
-    "rescript": "10.1.4"
+    "rescript": "11.0.0"
   }
 }
